--- a/back-end/package.json
+++ b/back-end/package.json
@@ -29,10 +29,12 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/multer": "^1.4.7",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -48,7 +50,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
-    "@types/node": "18.15.11",
+    "@types/node": "^18.15.11",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.11",
